# boardswarm

./: .buildinfo  .gitignore  Cargo.toml  Dockerfile  README.md  TODO  deny.toml  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/guides/: basic-functionality.doctree  setup-client.doctree  setup-server.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  dist-notes.md  dist.yml  website.yml
_sources/guides/: setup-server.rst.txt
boardswarm/: Cargo.toml  Dockerfile  README.md
boardswarm-cli/: Cargo.toml  Dockerfile  README.md  test.token  token.yaml
boardswarm-cli/src/: authenticator.rs  client.rs  config.rs  device.rs  lib.rs  main.rs  oidc.rs  ui.rs  ui_status.rs  ui_term.rs  utils.rs
boardswarm-client/: Cargo.toml  README.md
boardswarm-client/src/: authenticator.rs  client.rs  config.rs  device.rs  lib.rs  oidc.rs
boardswarm-protocol/: Cargo.toml  README.md  build.rs
boardswarm-protocol/proto/: boardswarm.proto  serial-badger.proto  serial.proto
boardswarm-protocol/src/: lib.rs
boardswarm-website/: conf.py  index.rst
boardswarm/docs/: design.md
boardswarm/share/: 99-boardswarm.rules  auth.jwks  boardswarm.service  pipertis.conf  pipertis.token  server.conf
boardswarm/share/udev/: 99-dfu.rules  99-gpio.rules  99-rockchip.rules  99-serial.rules
boardswarm/src/: authentication.rs  config.rs  config_device.rs  dfu.rs  eswin_eic7700_storage.rs  fastboot.rs  gpio.rs  hifive_p550_mcu.rs  main.rs  mediatek_brom.rs  pdudaemon.rs  provider.rs  qcomlt_debug_board.rs  registry.rs  rockusb.rs  serial_command.rs  ti_xds.rs  udev.rs  utils.rs
boardswarm/src/boardswarm_provider/: actuator.rs  console.rs  device.rs  mod.rs  volume.rs
boardswarm/src/serial/: mod.rs
guides/: basic-functionality.html  setup-client.html  setup-server.html
pdudaemon-client/: Cargo.toml
pdudaemon-client/examples/: pducli.rs
pdudaemon-client/src/: lib.rs
protocol/: Cargo.toml  build.rs
protocol/proto/: serial.proto
protocol/src/: lib.rs
server/: Cargo.toml
server/share/: server.conf
server/src/: config.rs  main.rs  pdudaemon.rs  udev.rs
server/src/serial/: mod.rs
src/: main.rs  ui_term.rs
ui/: Cargo.toml
ui/src/: main.rs  ui_term.rs
website/: conf.py  index.rst
website/boards/: genio700.rst  mediatek.rst
website/guides/: basic-functionality.rst  gpio-control.rst  python-scripting.rst  setup-client.rst  setup-server.rst
website/guides/sections/: gpio_udev.rst  serial_identification.rst  serial_udev.rst
