[package]
name = "serial-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
derive = "1.0.0"
features = "0.10.0"
mprocs-vt100 = "0.1.1"
nix = "0.26.1"
tokio = { version = "1.23.0", features = ["full"] }
tokio-serial = "5.4.4"
tui = "0.19.0"
