[workspace]
resolver = "2"
members = [
  "boardswarm",
  "boardswarm-protocol",
  "boardswarm-cli",
  "boardswarm-client",
]

[workspace.package]
rust-version = "1.90"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.225", features = ["derive"] }
http = "1.4"
tokio = { version = "1.49", features = ["full"] }
serde_json = "1.0.145"
