[package]
name = "boardswarm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
derive = "1.0.0"
features = "0.10.0"
futures = "0.3.25"
mprocs-vt100 = "0.1.1"
nix = "0.26.1"
boardswarm-protocol = { version = "0.1.0", path = "../boardswarm-protocol" }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
tui = "0.19.0"
serde_json = "1.0.91"
tracing = "0.1.37"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
thiserror = "1.0.40"
bmap-parser = "0.1.0"
async-compression = { version = "0.3.15", features = ["futures-io", "gzip"] }
rockfile = "0.1.0"
tower = "0.4.13"
http = "0.2.9"
serde = "1.0.189"
http-serde = "1.1.3"
serde_yaml = "0.9.25"
dirs = "5.0.1"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
json = "0.12.4"
async-trait = "0.1.74"
url = { version = "2.4.1", features = ["serde"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
