[package]
name = "boardswarm-cli"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm command line client"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
bytes = "1.4.0"
clap = { version = "~4.4.18", features = ["derive"] }
crossterm = "0.27.0"
futures = "0.3.25"
mprocs-vt100 = "0.1.1"
nix = { version = "0.28.0", features = ["term"] }
boardswarm-protocol = { version = "0.0.1", path = "../boardswarm-protocol" }
boardswarm-client = { version = "0.0.1", path = "../boardswarm-client" }
tokio = { version = "1.30.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
serde_json = "1.0.91"
tracing = "0.1.37"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
itertools = "0.12.1"
bmap-parser = "0.2.0"
async-compression = { version = "0.4.5", features = ["futures-io", "gzip"] }
rockfile = "0.1.0"
http = "0.2.9"
serde = "1.0.189"
http-serde = "1.1.3"
serde_yaml = "0.9.25"
dirs = "5.0.1"
reqwest = { version = "0.12.3", features = ["json"] }
json = "0.12.4"
async-trait = "0.1.74"
url = { version = "2.4.1", features = ["serde"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ratatui = "0.26.1"
