[package]
name = "boardswarm-cli"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm command line client"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
mprocs-vt100 = "0.7.0"
nix = { version = "0.31.1", features = ["term"] }
boardswarm-protocol = { version = "0.0.1", path = "../boardswarm-protocol" }
boardswarm-client = { version = "0.0.1", path = "../boardswarm-client" }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
serde_json = "1.0.140"
tracing = "0.1.41"
indicatif = { version = "0.18.2", features = ["improved_unicode", "tokio"] }
itertools = "0.14.0"
bmap-parser = "0.2.0"
async-compression = { version = "0.4.5", features = ["futures-io", "gzip"] }
rockfile = "0.1.0"
http = "1.3.1"
serde = "1.0.219"
http-serde = "2.1"
serde_yaml = "0.9.25"
dirs = "6.0.0"
async-trait = "0.1.88"
url = { version = "2.5.3", features = ["serde"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ratatui = "0.29.0"
android-sparse-image = "0.1.2"
thiserror = "2.0.7"
