[package]
name = "boardswarm-client"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm client library"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
bytes = "1.9.0"
futures = "0.3.31"
boardswarm-protocol = { version = "0.0.1", path = "../boardswarm-protocol" }
tokio = { version = "1.43.1", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
tracing = "0.1.40"
thiserror = "2.0.6"
tower = "0.5"
http = "1.2.0"
serde = "1.0.194"
http-serde = "2.1"
serde_yaml = "0.9.25"
oauth2 = { version = "5.0.0-rc.1", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls-native-roots"] }
async-trait = "0.1.74"
url = { version = "2.5.3", features = ["serde"] }
