[package]
name = "boardswarm-client"
version = "0.0.1"
edition.workspace = true
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm client library"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"
rust-version.workspace = true

[dependencies]
anyhow = "1.0.68"
bytes = "1.10.1"
futures = "0.3.31"
boardswarm-protocol = { version = "0.0.1", path = "../boardswarm-protocol" }
tokio.workspace = true
tonic = { version = "0.14", features = ["tls-native-roots", "tls-aws-lc"] }
tracing = "0.1.41"
thiserror = "2.0.7"
tower = "0.5.2"
http.workspace = true
serde = { workspace = true }
http-serde = "2.1"
serde_yaml = "0.9.25"
oauth2 = { version = "5.0.0-rc.1", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12.15",  default-features = false, features = ["json", "rustls-tls-native-roots-no-provider" ] }
async-trait = "0.1.88"
url = { version = "2.5.3", features = ["serde"] }
