[package]
name = "boardswarm-protocol"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm protobuf protocol definitions"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
bytes = "1.8.0"
futures = "0.3.31"
prost = "0.13"
prost-derive = "0.13"
prost-types = "0.13"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
prost-build = "0.13.1"
prost-wkt-build = "0.6"
tonic-build = "0.12.3"

[dev-dependencies]
serde_json = "1.0.91"
