[package]
name = "boardswarm-protocol"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm protobuf protocol definitions"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
prost = "0.13"
prost-derive = "0.14"
prost-types = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.13"

[build-dependencies]
prost-build = "0.13.1"
prost-wkt-build = "0.6"
tonic-build = "0.13"

[dev-dependencies]
serde_json = "1.0.140"
