[package]
name = "boardswarm-protocol"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm protobuf protocol definitions"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
prost = "0.14"
tonic-prost = "0.14"
prost-derive = "0.14"
prost-types = "0.14"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
serde_json = "1.0.140"
