[package]
name = "boardswarm"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm server"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.74"
bytes = "1.9.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
humantime-serde = "1.1.1"
pdudaemon-client = { version = "0.1.2", default-features=false }
boardswarm-protocol = { version = "0.0.1", path = "../boardswarm-protocol" }
serde = { version = "1.0.194", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "2.0.6"
tokio = { version = "1.43.1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-udev = "0.9"
tokio-util = { version = "0.7.4", features = ["compat"]}
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.5.3"
erased-serde = "0.4.4"
tokio-stream = { version = "0.1.16", features = ["sync"] }
boardswarm-client = { version = "0.0.1", path = "../boardswarm-client" }
tokio-gpiod = "0.3.0"
rockusb = { version = "0.2.0", features = [ "nusb" ] }
jwt-authorizer = { version = "0.15", default-features = false, features = [ "tonic", "rustls-tls-native-roots", "chrono" ] }
axum = "0.7.4"
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
nusb = "0.1.11"
dfu-nusb = "0.1.0"
mediatek-brom = { version = "0.1.0", features = ["tokio"] }
fastboot-protocol = "0.2.1"
android-sparse-image = "0.1.2"
