[package]
name = "boardswarm"
version = "0.0.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Boardswarm server"
repository = "https://github.com/boardswarm/boardswarm"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
humantime-serde = "1.1.1"
pdudaemon-client = { version = "0.1.2", default-features=false }
boardswarm-protocol = { version = "0.0.1", path = "../boardswarm-protocol" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "2.0.7"
tokio = { version = "1.44.2", features = ["full"] }
tokio-serial = "5.4.4"
tokio-udev = "0.9"
tokio-util = { version = "0.7.4", features = ["compat"]}
tonic = "0.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.3"
erased-serde = "0.4.4"
tokio-stream = { version = "0.1.16", features = ["sync"] }
boardswarm-client = { version = "0.0.1", path = "../boardswarm-client" }
tokio-gpiod = "0.3.0"
rockusb = { version = "0.3.0", features = [ "nusb" ] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
nusb = "0.1.14"
dfu-nusb = "0.1.0"
mediatek-brom = { version = "0.2.0", features = ["tokio"] }
fastboot-protocol = "0.3.1"
android-sparse-image = "0.1.2"
jsonwebtoken = "10.0.0"
tower-oauth2-resource-server = { version = "0.4.0", default-features = false }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls-native-roots"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
regex = "1.11.1"
proc-mounts = "0.3.0"
