[package]
name = "pdudaemon-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
thiserror = "1.0.38"
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
