[package]
name = "pdudaemon-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
thiserror = "1.0.40"
url = "2.4.1"

[dev-dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.30.0", features = ["full"] }
