[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
futures = "0.3.25"
prost = "0.11.5"
tokio = { version = "1.23.0", features = ["full"] }
tonic = "0.8.3"

[build-dependencies]
prost-build = "0.11.5"
tonic-build = "0.8.4"
