[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
protocol = { version = "0.1.0", path = "../protocol" }
tokio = { version = "1.23.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = "0.7.4"
tonic = "0.8.3"
