[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
humantime-serde = "1.1.1"
pdudaemon-client = { version = "0.1.0", path = "../pdudaemon-client" }
protocol = { version = "0.1.0", path = "../protocol" }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-udev = "0.8.0"
tokio-util = "0.7.4"
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
